# zksync-7702-tests

./: Cargo.toml  Makefile  README.md
contracts/src/: Evm7702Checker.sol  SimpleDelegateContract.sol
src/: main.rs  utils.rs
src/assertions/: mod.rs  should_change_balance.rs  should_change_storage.rs  should_emit_log.rs  should_increment_nonce.rs  should_revert.rs  should_succeed.rs
src/contracts/: mod.rs
src/suites/: basic_eravm.rs  basic_evm.rs  mod.rs
